--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -206,5 +206,13 @@
     <dimen name="item_card_height">280dp</dimen>
     <dimen name="item_text_top">8dp</dimen>
     <dimen name="item_profil_margin_top">40sp</dimen>
-
+    //////////pub
+    <dimen name="pub_title_text_size">40sp</dimen>
+    <dimen name="pub_dec_text_size">20sp</dimen>
+    <dimen name="pub_desc_text_size">500dp</dimen>
+    <dimen name="pub_location_start">40dp</dimen>
+    <dimen name="pub_image_top">8dp</dimen>
+    <dimen name="pub_first_image_top">30dp</dimen>
+    <dimen name="pub_button_start_end">45dp</dimen>
+    <dimen name="pub_desc_top">24dp</dimen>
 </resources>
