--- a/CommunityMarket/app/src/main/res/values-xhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xhdpi/dimens.xml
@@ -207,4 +207,13 @@
     <dimen name="item_card_height">230dp</dimen>
     <dimen name="item_text_top">8dp</dimen>
     <dimen name="item_profil_margin_top">30sp</dimen>
+    //////////pub
+    <dimen name="pub_title_text_size">30sp</dimen>
+    <dimen name="pub_dec_text_size">14sp</dimen>
+    <dimen name="pub_desc_text_size">300dp</dimen>
+    <dimen name="pub_location_start">40dp</dimen>
+    <dimen name="pub_image_top">8dp</dimen>
+    <dimen name="pub_first_image_top">20dp</dimen>
+    <dimen name="pub_button_start_end">16dp</dimen>
+    <dimen name="pub_desc_top">16dp</dimen>
 </resources>
