--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -35,7 +35,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:ignore="Orientation"></LinearLayout>
+        tools:ignore="Orientation">
+
+    </LinearLayout>
 
 
     <com.google.android.gms.common.SignInButton
@@ -98,7 +100,7 @@
         android:layout_marginTop="132dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/caveat"
-        android:text="Open Market"
+        android:text="Welcome"
         android:textColor="@color/blanc"
         android:textSize="@dimen/choice_Logo_text_size"
         android:textStyle="bold"
@@ -106,5 +108,19 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:text="Open market est votre nouveaux partenaire en affaires , vendez partout aux cameroun,sans frais . "
+        android:textAlignment="center"
+        android:textColor="@color/blanc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </android.support.constraint.ConstraintLayout>
