--- a/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
@@ -22,7 +22,7 @@
 
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +36,7 @@
         android:id="@+id/textView5"
         android:layout_width="@dimen/desc_widh"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="@dimen/desc_margingTop"
+        android:layout_marginTop="@dimen/a_propos_margin_top"
         android:fontFamily="sans-serif"
         android:text="@string/titre_slider3"
         android:textAlignment="center"
@@ -52,14 +51,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="@dimen/desc_marginend"
         android:fontFamily="sans-serif"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
         android:text="@string/description_slider3"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/slide_desc"
+        android:textSize="@dimen/new_detail_desc_text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
