--- a/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/pantalons"
+        android:src="@drawable/shoes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
 
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,10 +36,9 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="@dimen/desc_widh"
+        android:layout_width="@dimen/text_choice_widht"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="@dimen/desc_margingTop"
+        android:layout_marginTop="@dimen/a_propos_margin_top"
         android:fontFamily="sans-serif"
         android:text="@string/titre_slider1"
         android:textAlignment="center"
@@ -62,7 +61,8 @@
         android:text="@string/description_titre_slider1"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/slide_desc"
+        android:textSize="@dimen/new_detail_desc_text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
