--- a/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
@@ -21,7 +21,7 @@
 
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,8 +35,7 @@
         android:id="@+id/textView5"
         android:layout_width="@dimen/desc_widh"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="@dimen/desc_margingTop"
+        android:layout_marginTop="@dimen/a_propos_margin_top"
         android:fontFamily="sans-serif"
         android:text="@string/titre_slider2"
         android:textAlignment="center"
@@ -51,14 +50,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="@dimen/desc_marginend"
         android:fontFamily="sans-serif"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
         android:text="@string/slider_description_slider2"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/slide_desc"
+        android:textSize="@dimen/new_detail_desc_text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
