--- a/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxhdpi/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <!-- a propos activity. -->
-    <dimen name="a_propos_margin_top">164dp</dimen>
+    <dimen name="a_propos_margin_top">200dp</dimen>
     <dimen name="a_propos_text_size">20sp</dimen>
     <dimen name="a_propos_contacter_nous">18sp</dimen>
     <dimen name="a_propos_nuttoon_padding">68dp</dimen>
@@ -14,8 +14,8 @@
     <dimen name="button_size_text">12sp</dimen>
 
     <!-- choice activity. -->
-    <dimen name="choice_Logo_margin_top">120dp</dimen>
-    <dimen name="choice_Logo_text_size">39sp</dimen>
+    <dimen name="choice_Logo_margin_top">150dp</dimen>
+    <dimen name="choice_Logo_text_size">80sp</dimen>
     <dimen name="choice_button_top">200dp</dimen>
     <dimen name="choice_button_padding_top">10dp</dimen>
     <!-- profil activity. -->
@@ -214,4 +214,12 @@
     <dimen name="pub_first_image_top">20dp</dimen>
     <dimen name="pub_button_start_end">16dp</dimen>
     <dimen name="pub_desc_top">16dp</dimen>
+    ///detail_two
+    <dimen name="detail_image_top">380dp</dimen>
+    <dimen name="detail_image_start">32dp</dimen>
+    <dimen name="profil_detail_start_text">32dp</dimen>
+    <dimen name="detail_text_size_two">18sp</dimen>
+    <dimen name="text_choice_widht">330dp</dimen>
+    <dimen name="button_margin_top">88dp</dimen>
+
 </resources>
