--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -13,8 +13,8 @@
     <dimen name="a_propos_button_size_text">14sp</dimen>
     <dimen name="button_size_text">12sp</dimen>
     <!-- choice activity. -->
-    <dimen name="choice_Logo_margin_top">120dp</dimen>
-    <dimen name="choice_Logo_text_size">50sp</dimen>
+    <dimen name="choice_Logo_margin_top">180dp</dimen>
+    <dimen name="choice_Logo_text_size">80sp</dimen>
     <dimen name="choice_button_top">200dp</dimen>
     <dimen name="choice_button_padding_top">10dp</dimen>
     <!-- profil activity. -->
@@ -136,7 +136,7 @@
     <dimen name="new_detail_top_name_date">16dp</dimen>
     <dimen name="new_detail_height_button">40dp</dimen>
     <dimen name="new_detail_desc_margin_top">16dp</dimen>
-    <dimen name="new_detail_desc_text_size">16sp</dimen>
+    <dimen name="new_detail_desc_text_size">18sp</dimen>
     <dimen name="new_detail_height_image">36dp</dimen>
     <dimen name="new_detail_add_button">60dp</dimen>
     <dimen name="new_detail_add_height">40dp</dimen>
@@ -217,4 +217,12 @@
     <dimen name="pub_first_image_top">20dp</dimen>
     <dimen name="pub_button_start_end">16dp</dimen>
     <dimen name="pub_desc_top">16dp</dimen>
+    ///detail_two
+    <dimen name="detail_image_top">380dp</dimen>
+    <dimen name="detail_image_start">32dp</dimen>
+    <dimen name="profil_detail_start_text">32dp</dimen>
+    <dimen name="detail_text_size_two">18sp</dimen>
+    <dimen name="text_choice_widht">360dp</dimen>
+    <dimen name="button_margin_top">88dp</dimen>
+
 </resources>
