--- a/CommunityMarket/app/src/main/res/values/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values/dimens.xml
@@ -274,6 +274,10 @@
     //choice three
     <dimen name="text_choice_widht">300dp</dimen>
     <dimen name="button_margin_top">88dp</dimen>
+    //splash
+    <dimen name="splash_progress_top">236dp</dimen>
+    <dimen name="splash_text_proverb">12sp</dimen>
+    <dimen name="splash_text_logo_name">20sp</dimen>
 
 
 </resources>
