--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -234,5 +234,10 @@
     <dimen name="detail_image_height_width">60dp</dimen>
     <dimen name="text_choice_widht">700dp</dimen>
     <dimen name="button_margin_top">88dp</dimen>
+    //splash
+    <dimen name="splash_progress_top">400dp</dimen>
+    <dimen name="splash_text_proverb">20sp</dimen>
+    <dimen name="splash_text_logo_name">30sp</dimen>
+
 
 </resources>
