--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -224,5 +224,10 @@
     <dimen name="detail_text_size_two">18sp</dimen>
     <dimen name="text_choice_widht">360dp</dimen>
     <dimen name="button_margin_top">88dp</dimen>
+    //splash
+    <dimen name="splash_progress_top">390dp</dimen>
+    <dimen name="splash_text_proverb">14sp</dimen>
+    <dimen name="splash_text_logo_name">24sp</dimen>
+
 
 </resources>
