--- a/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
@@ -28,7 +28,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="vous nous laissez ?"
+                android:text="ohhlala vous nous laissez deja?,je suis triste :( ."
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
@@ -85,7 +85,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="72dp"
                 android:layout_marginEnd="8dp"
-                android:text="Exit !!!"
+                android:text="Exit ?"
                 android:textColor="@color/blanc"
                 android:textSize="60sp"
                 android:textStyle="bold"
