--- a/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-
-
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/imageslide"
         android:layout_width="match_parent"
@@ -21,7 +18,6 @@
         android:contentDescription="@string/slider_description"/>
 
     <LinearLayout
-
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:alpha="0.8"
