--- a/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
+++ b/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
@@ -10,6 +10,7 @@
         <item>@font/bangers</item>
         <item>@font/caveat</item>
         <item>@font/condiment</item>
+        <item>@font/damion</item>
         <item>@font/fugaz_one</item>
         <item>@font/pacifico</item>
         <item>@font/playball</item>
